<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TonUINO NFC Tools</string>
    <string name="app_version">(v%s)</string>
    <string name="main_intro_line1">This app can read and write NFC-compatible RFID Tags for the TonUINO DIY music
        box.
    </string>
    <string name="main_intro_line2">More information about the TonUINO project is available at https://www.tonuino.de (mostly German).
    </string>
    <string name="main_nfcadapter_error">Error</string>
    <string name="main_nfcadapter_is_null">This device does not support NFC. The functionality is not available.
    </string>
    <string name="main_nfcadapter_disabled">"NFC is available, but currently deactivated.\nPlease enable NFC in the device settings."
    </string>
    <string name="main_nfcadapter_settings">Open settings</string>
    <string name="main_read_tag_headline">Read tags</string>
    <string name="main_read_tag_description">If this device is placed on a supported NFC-compatible RFID tag, which
        contains TonUINO data, the data will be read and displayed.
    </string>
    <string name="main_write_tag_headline">Write tags</string>
    <string name="main_write_tag_description">Existing data on the tag will be overwritten.</string>
    <string name="main_write_tag_button">Write data on tag</string>
    <string name="main_write_bulk_button">Enter bulk write list</string>
    <string name="main_usb_headline">USB storage</string>
    <string name="main_usb_description">Connect your Tonuino microSD via a USB card reader (or via the builtin USB of the DFPlayer Mini) to write tags. It will scan the content of the microSD card giving you an overview of the content of each folder. Tapping on a folder lets you directly write a new tag for it.</string>
    <string name="main_usb_button">Show folders</string>
    <string name="main_usb_pick_other_button">Select location</string>
    <string name="main_usb_not_found">No removable storage detected. Connect a USB drive or card reader or pick a location manually.</string>
    <string name="main_usb_picker_cancelled">Selection was cancelled. No files read.</string>
    <string name="main_usb_missing_uri">No location was returned by the system.</string>
    <string name="main_usb_open_failed">Could not open the selected storage.</string>
    <string name="main_usb_using_saved_access">Reusing saved USB access...</string>
    <string name="main_usb_saved_access_invalid">Saved USB access is no longer valid. Please reselect the drive.</string>
    <string name="main_usb_no_saved_location">No USB location saved yet. Choose a location first.</string>
    <string name="main_usb_no_files">No files found on the selected drive.</string>
    <string name="main_usb_listing_prefix">Files on USB drive:</string>
    <string name="usb_list_title">USB files</string>
    <string name="usb_list_loading">Loading files...</string>
    <string name="usb_list_no_uri">No USB location was provided.</string>
    <string name="usb_list_error">Could not open the selected storage.</string>
    <string name="usb_list_header_album_art">Art</string>
    <string name="usb_list_header_folder">#</string>
    <string name="usb_list_header_files">Files</string>
    <string name="usb_list_header_artist">Artist</string>
    <string name="usb_list_header_album">Album</string>
    <string name="usb_list_no_folders">No folders found on the selected drive.</string>
    <string name="usb_folder_unknown_name">(unnamed folder)</string>
    <string name="usb_list_unknown_artist">(unknown artist)</string>
    <string name="usb_list_unknown_album">(unknown album)</string>
    <string name="usb_folder_title_format">%1$s: %2$s</string>
    <string name="usb_scan_dialog_title">Scanning files</string>
    <string name="usb_scan_preparing">Preparing scan...</string>
    <string name="usb_scan_progress">%1$d / %2$d files processed</string>
    <string name="usb_list_row_action_hint">Write tag with this folder</string>
    <string name="usb_list_track_count">%1$d tracks</string>
    <string name="usb_list_track_count_with_duration">%1$d tracks, %2$s</string>
    <string name="usb_list_mixed_album">(mixed)</string>
    <string name="usb_list_empty_folder">(empty)</string>
    <string name="main_usb_new_drive_title">New USB drive detected</string>
    <string name="main_usb_new_drive_message">Use the newly connected drive instead of the saved location?</string>
    <string name="main_usb_new_drive_use">Use new drive</string>
    <string name="main_usb_new_drive_keep">Keep saved location</string>
    <string name="edit_nfc_connection_lost">Connection lost</string>
    <string name="edit_tonuino_version_label">Select tag type</string>
    <string-array name="edit_tonuino_tag_types">
        <item>Tonuino 2.0.x</item>
        <item>Tonuino 2.1</item>
        <item>Tonuino 2.1 Modifier Tag</item>
    </string-array>
    <string name="edit_tab_simple">Default</string>
    <string name="edit_tab_extended">Extended</string>
    <string name="edit_tab_bytes">Bytes</string>
    <string name="edit_cookie_label">Cookie</string>
    <string name="edit_version_label">Version</string>
    <string name="edit_folder_label">Folder</string>
    <string name="edit_mode_label">Mode</string>
    <string name="edit_special_label">Extra</string>
    <string name="edit_special_label_for_album_mode">Title</string>
    <string name="edit_special_label_for_modifier_sleep_timer">Minutes</string>
    <string name="edit_special_label_from">From</string>
    <string name="edit_special2_label">Extra 2</string>
    <string name="edit_special2_label_to">To</string>
    <string name="edit_version_1">Format 1: For Tonuino 2.0.x</string>
    <string name="edit_version_2">Format 2: For Tonuino 2.1 and Tonuino TNG 3.1</string>
    <string name="edit_hidden_label">hidden</string>
    <string name="edit_unknown_value">Value \'%s\' is unknown.</string>
    <string name="edit_limit_numeric_value" tools:ignore="PluralsCandidate">Please enter a number between %d and %d.</string>
    <string-array name="edit_version">
        <item>Tonuino 2.0.x</item>
        <item>Tonuino 2.1.x and Tonuino TNG</item>
    </string-array>
    <string-array name="edit_mode">
        <item>Audio book (single file)</item>
        <item>Album</item>
        <item>Party</item>
        <item>Single</item>
        <item>Audio book (multiple files)</item>
        <item>Admin</item>
        <item>Audio book from-to (single file)</item>
        <item>Album from-to</item>
        <item>Party from-to</item>
        <item>Audio book series (single files)</item>
        <item>Repeat last</item>
        <item>Quiz Game</item>
        <item>Memory Game</item>
        <item>Bluetooth</item>
    </string-array>
    <string-array name="edit_mode_description">
        <item>A random file from the chosen folder will be played.</item>
        <item>Plays all files inside the folder in numerical order.</item>
        <item>Plays random files inside the folder.</item>
        <item>Plays only the chosen file from the selected folder.</item>
        <item>Plays all files inside the folder in numerical order and keeps track of the last started file. This way
            the tag will play where it left off the last time.
        </item>
        <item>Tonuino 2.0.1 does not yet support admin tags.</item>
        <item>A random file from the chosen folder between the selected minimum and maximum will be played.</item>
        <item>Plays all files inside the folder between the selected minimum and maximum in numerical order.</item>
        <item>Plays random files inside the folder between the selected minimum and maximum.</item>
        <item>Plays the next file from the folder and store the progress.</item>
        <item>Repeat the last card or shortcut.</item>
        <item>Play a quiz game either with answers or with a buzzer.</item>
        <item>Play a memory game.</item>
        <item>Toggles bluetooth mode on or off.</item>
    </string-array>
    <string name="edit_mode_unknown">Mode \'%d\' is unknown.</string>
    <string-array name="edit_modifier_tags">
        <item>Admin menu</item>
        <item>Sleep timer</item>
        <item>Freeze dance</item>
        <item>Locked</item>
        <item>Toddler mode</item>
        <item>Kindergarten mode</item>
        <item>Repeat single tag</item>
        <item>Bluetooth</item>
    </string-array>
    <string-array name="edit_modifier_tags_description">
        <item>Opens the TonUINO admin menu</item>
        <item>Pauses playback after timer</item>
        <item>Randomly pauses the track after 5 to 30 seconds</item>
        <item>All buttons are locked and no new card will be read</item>
        <item>All buttons are locked</item>
        <item>Previous and back buttons are locked. Adding a new card will not stop the current track but will schedule it as next track</item>
        <item>Repeat current track</item>
        <item>Bluetooth modifier</item>
    </string-array>
    <string name="edit_special_from">Between track %d</string>
    <string name="edit_special_label_for_sleep_timer">Minutes</string>
    <string name="edit_special2_to">And track %d</string>
    <string name="edit_write_button">Write data on tag %s</string>
    <string name="edit_write_button_no_tag">Cannot write data without a tag</string>
    <string name="edit_write_description">To increase the chances that the data will be successfully written, place the
        device directly on top of the tag and then press the button to write.
    </string>
    <string name="edit_unsupported_value">%s (Nicht unterstützt)</string>
    <string name="edit_simple_intro">This view allows to select values for the NFC tag.</string>
    <string name="edit_folder_normal_tag">Regular tag</string>
    <string name="edit_folder_modifier_tag">Modifier tag</string>
    <string name="edit_extended_intro">This extended view can be used to enter values for TonUINO variants that this
        app does not know about.
    </string>
    <string name="edit_ext_folder_description">Uses the folder /%02d.</string>
    <string name="ext_folder_description_modifier">This is a modifier tag.</string>
    <string name="edit_ext_folder_not_allowed_description">DFPlayer can only access folders up to 99</string>
    <string name="edit_hex_intro">This view can be used to enter arbitrary data.</string>
    <string name="edit_hex_disclaimer">The first four byte are used by TonUINO to recognize a usable tag. This cookie
        must also be the same in the TonUINO source code. Otherwise the tag will not work.
    </string>
    <string name="edit_hex_bytes_label">Bytes (hexadecimal)</string>
    <string name="edit_hex_whitespace">Whitespace will be ignored.</string>
    <string name="edit_hex_zeropad">This app will always write full sectors (size depends on tag). The rest of the
        sector will be filled with \'0x0\'.
    </string>
    <string name="written_title_failure">Error</string>
    <string name="written_success">Success: Wrote to tag.</string>
    <string name="written_unsupported_tag_type">This app/device cannot write on this kind of NFC tag</string>
    <string name="written_authentication_failure">Authenticating at the NFC Tag failed.</string>
    <string name="written_tag_unavailable">No NFC tag available.</string>
    <string name="written_unknown_error">An unknown error has occurred</string>
    <string name="written_button_retry">Try again</string>
    <string name="identify_unknown_type">unknown</string>
    <string name="identify_unsupported_type">unsupported</string>
    <string name="read_title">Tag %s</string>
    <string name="read_intro">Read data</string>
    <string name="read_edit_button">Edit</string>
    <string name="bulk_activity_title">Bulk write tags</string>
    <string name="bulk_edit_label">Edit List</string>
</resources>