<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_intro_line1" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/main_intro_line2" />

        <LinearLayout
                android:id="@+id/error_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:background="#B00020"
                android:orientation="vertical"
                android:padding="@dimen/margin_half">
            <!--
            TODO add proper theming
                https://github.com/material-components/material-components-android/blob/master/docs/getting-started.md
                values from here: https://material.io/design/color/the-color-system.html#color-theme-creation
            -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_nfcadapter_error"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="#FFFFFF" />

            <TextView
                    android:id="@+id/error_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#FFFFFF" />

            <Button
                    android:id="@+id/nfc_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="openNfcSettings"
                    android:text="@string/main_nfcadapter_settings" />
        </LinearLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_default" />

        <LinearLayout
                android:id="@+id/enabled_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_read_tag_headline"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_read_tag_description" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_default" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_write_tag_headline"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_write_tag_description" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showWriteActivity"
                    android:text="@string/main_write_tag_button" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showBulkWriteActivity"
                    android:text="@string/main_write_bulk_button" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_default" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_usb_headline"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_usb_description" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/usb_list_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="listUsbFiles"
                        android:text="@string/main_usb_button" />

                <Button
                        android:id="@+id/usb_list_pick_other_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_half"
                        android:layout_weight="1"
                        android:onClick="pickUsbLocation"
                        android:text="@string/main_usb_pick_other_button" />
            </LinearLayout>

            <TextView
                    android:id="@+id/usb_result_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_half"
                    android:textIsSelectable="true" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
